# rv1126

./: README.md
ir_ting1C_project/: CMakeLists.txt  Makefile  README.md  README_EN.md  camera.cpp  camera.h  cmd.cpp  cmd.h  data.cpp  data.h  display.cpp  display.h  lib_copy.sh  lib_dll_copy.py  libs_version.txt  run.sh  sample.cpp  sample.h  temperature.cpp  temperature.h
ir_ting1C_project/include/: all_config.h  falcon_cmd.h  libirtemp.h  libiruvc.h
ir_ting1C_project/libs/: libusb-1.0.so.0.2.0
